--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8090
 spring.profiles.active=test
 spring.jpa.open-in-view=true
+spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
